--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="container">
-        <span class="">Copyright &copy; 2020 - 2021 Dylan Cross</span>
+        <span class="">Copyright &copy; 2019-2021 Dylan Cross</span>
       </div>
     </footer>
 
