--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main role="main" class="flex-shrink-0">
       <section class="container">
         <h1>This site is under construction!</h1>
-        <p class="lead">Hello! I'm currently redesigning my homepage and should have everything up and running within a few months.</p>
+        <p class="lead">Hi! I'm currently redesigning my homepage and should have everything up and running within a few months.</p>
         <p>Feel free to contact me at <a href="mailto:dylan@dylancross.us">dylan@dylancross.us</a></p>
       </section>
     </main>
