Updated site under construction notice.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
     <main role="main" class="flex-shrink-0">
       <section class="container">
         <h1>This site is under construction!</h1>
-        <p class="lead">Hi! I'm currently redesigning my homepage and should have everything up and running within a few months.</p>
+        <p class="lead">
+          Thanks for dropping by! I'm currently rebuilding 
+          my homepage using Bootstrap and ReactJS. I'm 
+          working to have everything up and running before 
+          the end of summer.
+        </p>
         <p>Feel free to contact me at <a href="mailto:dylan@dylancross.us">dylan@dylancross.us</a></p>
       </section>
     </main>
